@@ -23,8 +23,8 @@ microRNA-Seq, microarray(mRNA), microarray(miRNA) and methylation data.
 \tabular{lllll}{
 Package: \tab cbaf \cr
 Type: \tab Package \cr
-Version: \tab 1.12.0 \cr
-Date: \tab 2020-10-26 \cr
+Version: \tab 1.12.1 \cr
+Date: \tab 2020-12-07 \cr
 License: \tab Artistic-2.0 \cr
 }
 }
